# starwars-api

./: .env.example  Dockerfile  README.md  docker-compose.yml
starwars-api-app/: pyproject.toml
starwars-api-app/app/: config.py  exceptions.py  main.py  utils.py
starwars-api-app/app/api/: dependencies.py  router.py  schemas.py
starwars-api-app/app/database/: models.py  session.py
starwars-api-app/app/services/: get_services.py
starwars-api-app/app/services/swapi/: entities.py  sync.py
starwars-api-app/app/tests/: test_endpoints.py  test_get_service.py  test_models.py  test_sync.py  test_utils.py
starwars-api-app/migrations/: env.py
starwars-api-app/migrations/versions/: 0001_create_tables.py  0002_update_crew_type.py  0003_replace_with_big_integer.py  0004_change_chars_to_pilots.py  0005_add_swapi_url.py
