[project]
name = "starwars-api-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.10.1",
    "scalar-fastapi>=1.4.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
